--- a/aguarelas.html
+++ b/aguarelas.html
@@ -4,14 +4,14 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title>Art Soul Colibri</title>
+    <title> Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta content="Art Soul Colibri" name="keywords">
-    <meta content="Art Soul Colibri" name="description">
+    <meta content="Atelier Colibri" name="keywords">
+    <meta content="Atelier Colibri" name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
@@ -121,28 +121,88 @@
         </div>
         <!-- Navbar End -->
 
-        <!-- Arte IntuitivaStart -->
+
+        <!-- Watshap Start-->
+        <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
+            onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
+        <!-- Watshap End  -->
+
+        <!-- Gallery Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
-                    <h1 class="text-center mb-3">Sobre mim e a Art Soul Colibri</h1>
-                    <p>Sou a Ana tenho 56 anos , Mãe , casada , e mãe bichiológica de cães e gatos , amo jardins flores
-                        e mares , ler , viajar e conhecer novas culturas , sou formada academicamente pela ESAP ( Escola
-                        Superior Artística do Porto ) , com DESE em Publicidade e um curso de Acupuntura Fitoterapia e
-                        Medicina Tradicional Chinesa (MTC) pela UMC, possuindo também CAP (actual CCP) e diversas
-                        Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
-                        Sou a Criadora do Art Soul Colibri , em 2007 fundei o Atelier Colibri e desde 2017 comecei a
-                        sentir uma forte vontade de mudança e evolução pois para mim havia coisas que estavam a deixar
-                        de fazer sentido … e Hoje em Abril de 2025 , trago á luz do Sol o Art Soul Colibri .
-                        O ‘Art Soul Colibri’ reflete uma conexão profunda com a arte, o autoconhecimento e a
-                        espiritualidade com essência e valores como transparência , levando desta forma até ti a minha
-                        Arte , e Autoconhecimento.
-
-                    </p>
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h1 class="mb-3">Gallery</h1>
+                    <p>ART SOUL COLIBRI.</p>
+                </div>
+                <div class="row g-4">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <div
+                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Full Name</h5>
+                                <small>€ 0.00</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <div
+                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Full Name</h5>
+                                <small>€ 0.00</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <div
+                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Full Name</h5>
+                                <small>€ 0.00</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <div
+                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Full Name</h5>
+                                <small>€ 0.00</small>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Arte intuitiva End -->
+        <!-- Gallery End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
