--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                         <div class="nav-item dropdown">
                             <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="" class="dropdown-item">Aguarelas</a>
-                                <a href="" class="dropdown-item">Telas</a>
-                                <a href="" class="dropdown-item">Mandalas</a>
+                                <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
+                                <a href="aguarelas.html" class="dropdown-item">Telas</a>
+                                <a href="aguarelas.html" class="dropdown-item">Mandalas</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
