--- a/aguarelas.html
+++ b/aguarelas.html
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
