--- a/aboutme.html
+++ b/aboutme.html
@@ -4,14 +4,14 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title> Art Soul Colibri</title>
+    <title>Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta content="Atelier Colibri" name="keywords">
-    <meta content="Atelier Colibri" name="description">
+    <meta content="Art Soul Colibri" name="keywords">
+    <meta content="Art Soul Colibri" name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
@@ -94,14 +94,14 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                            <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="aboutme.html" class="dropdown-item">Sobre Mim</a>
+                                <a href="sobremi.html" class="dropdown-item">Sobre Mim</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
+                            <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
@@ -109,9 +109,9 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="#" class="dropdown-item">E-books</a>
+                                <a href="" class="dropdown-item">E-books</a>
                             </div>
                         </div>
                         <a href="cursos.html" class="nav-item nav-link active">Cursos</a>
@@ -121,54 +121,73 @@
         </div>
         <!-- Navbar End -->
 
+        <!-- Arte IntuitivaStart -->
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h1 class="text-center mb-3">Sobre mim e a Art Soul Colibri</h1>
+                    <p>Ana Santiago tenho 56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos , amo
+                        jardins flores e mares , ler , viajar e conhecer locais que me chamam , eterna estudiosa por
+                        tudo aquilo que sinto que me acrescenta e evolui ,sou formada academicamente pela ESAP ( Escola
+                        Superior Artística do Porto ) , com DESE em Publicidade e (MTC) Acupuntura Fitoterapia e
+                        Medicina Tradicional Chinesa pela UMC, CAP (actual CCP) , Reiki 3 desde 2004 e tantas outras
+                        Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
 
-        <!-- Carrousel Start -->
-        <div class="container-fluid header bg-white p-0">
-            <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
-                <div class="col-md-6 p-5 mt-lg-5">
-                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="">
-                            <img class="img-fluid w-100" src="img/msn1.jpg">
-                        </div>
-                    </div>
+                    </p>
+                    <p>
+                    <p>Ana Santiago tenho 56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos , amo
+                        jardins flores e mares , ler , viajar e conhecer locais que me chamam , eterna estudiosa por
+                        tudo aquilo que sinto que me acrescenta e evolui ,sou formada academicamente pela ESAP ( Escola
+                        Superior Artística do Porto ) , com DESE em Publicidade e (MTC) Acupuntura Fitoterapia e
+                        Medicina Tradicional Chinesa pela UMC, CAP (actual CCP) , Reiki 3 desde 2004 e tantas outras
+                        Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
 
+                    </p>
+                    <p>O ‘Art Soul Colibri’ reflete uma conexão profunda com a arte, o autoconhecimento e a
+                        espiritualidade com essência e valores como Transparência, Empatia e Responsabilidade, levando
+                        desta forma até ti a minha Arte , e Autoconhecimento .
+                    </p>
+                    <p>Como seres espirituais a viver e experienciar uma vida terrena , acredito na conexão destas duas
+                        forças (Céu e Terra ) em nós, assim como na evolução e crescimento dia a dia , e ao longo desta
+                        maravilhosa caminhada.
+                    </p>
+                    Como seres espirituais a viver e experienciar uma vida terrena , acredito na conexão destas duas
+                    forças (Céu e Terra ) em nós, assim como na evolução e crescimento dia a dia , e ao longo desta
+                    maravilhosa caminhada.
+                    </p>
+                    </p>
+                    Acredito que o Autoconhecimento é um Caminho que nos Reconecta com a nossa verdadeira e mais pura
+                    essência.
+                    </p>
+                    </p>
+                    Benvinda(o) a estas pinceladas de Cor e Expressão,
+                    </p>
+                    </p>
+                    Benvinda(o) ao Art Soul Colibri
+                    </p>
+                    </p>
+                    Gratidão,
+                    </p>
+                    </p>
+                    Ana,
+                    </p>
                 </div>
-                <div class="col-md-6 animated fadeIn">
-                    <div class="owl-carousel header-carousel">
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri1.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri2.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri3.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri4.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri5.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri6.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri7.jpg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel_art_soul_colibri8.jpg" alt="">
+                <div class="container-xxl py-5">
+                    <div class="container">
+                        <div class="row g-5 align-items-center">
+                            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                                <video width="320" height="240" controls>
+                                    <source src="img/logoateliercolibri_animado.mp4" type="video/mp4">
+                                    <source src="movie.ogg" type="video/ogg">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Carrousel End -->
-
-        <!-- Watshap Start-->
-        <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
-            onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
-        <!-- Watshap End  -->
+        <!-- Arte intuitiva End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
