--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -97,11 +97,11 @@
                             <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="sobremi.html" class="dropdown-item">Sobre Mim</a>
+                                <a href="aboutme.html" class="dropdown-item">Sobre Mim</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
+                            <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="" class="dropdown-item">E-books</a>
                             </div>
