--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="aboutme.html" class="dropdown-item">Sobre Mim</a>
+                                <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
