--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     <link rel="icon" href="img/favicon.ico">
     <!-- Apple Touc Icon End -->
 
+    <!-- Enlazar documento con el manifest.json Start -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Enlazar documento con el manifest.json End -->
+
+
     <!-- Canonical start -->
     <link rel="canonical" href="https://artsoulcolibri.com/" />
     <!-- Canonical End -->
