--- a/aboutme.html
+++ b/aboutme.html
@@ -97,7 +97,7 @@
                             <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="aboutme.html" class="dropdown-item">Sobre Mim</a>
+                                <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -132,7 +132,6 @@
                         Superior Artística do Porto ) , com DESE em Publicidade e (MTC) Acupuntura Fitoterapia e
                         Medicina Tradicional Chinesa pela UMC, CAP (actual CCP) , Reiki 3 desde 2004 e tantas outras
                         Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
-
                     </p>
                     <p>
                     <p>Ana Santiago tenho 56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos , amo
@@ -141,7 +140,6 @@
                         Superior Artística do Porto ) , com DESE em Publicidade e (MTC) Acupuntura Fitoterapia e
                         Medicina Tradicional Chinesa pela UMC, CAP (actual CCP) , Reiki 3 desde 2004 e tantas outras
                         Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
-
                     </p>
                     <p>O ‘Art Soul Colibri’ reflete uma conexão profunda com a arte, o autoconhecimento e a
                         espiritualidade com essência e valores como Transparência, Empatia e Responsabilidade, levando
@@ -172,56 +170,58 @@
                     Ana,
                     </p>
                 </div>
-                <div class="container-xxl py-5">
-                    <div class="container">
-                        <div class="row g-5 align-items-center">
-                            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                                <video width="320" height="240" controls>
-                                    <source src="img/logoateliercolibri_animado.mp4" type="video/mp4">
-                                    <source src="movie.ogg" type="video/ogg">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
-                        </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                    <video width="320" height="240" controls>
+                        <source src="img/logoateliercolibri_animado.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Arte intuitiva End -->
+
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-2">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-4">Get in touch</h5>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
+                    <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/atelier_colibri"><i
+                                class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="mailto:ateliercolibri@gmail.com"><i
+                                class="fa fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Arte intuitiva End -->
-
-        <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-2">
-                <div class="row g-5">
-                    <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
-                        <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="mailto:ateliercolibri@gmail.com"><i
-                                    class="fa fa-envelope"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
-                            Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
-                        </div>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
+                        Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
+    </div>
+    <!-- Footer End -->
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
