--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -97,7 +97,7 @@
                             <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="aboutme.html" class="dropdown-item">Sobre Mim</a>
+                                <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -251,10 +251,12 @@
                     <h4 class="text-justify mb-3">Conexão Comunitária/Social</h4>
                     <p>Quando compartilhada, a arte intuitiva também pode criar conexões profundas entre as pessoas.</p>
                     <p><i>Arte intuitiva é uma caminhada fascinante e enriquecedora que vai além da simples criação
-                        visual ou estética É um mergulho nas nossas águas uma exploração interna que leva à descoberta
-                        do verdadeiro eu, permitindo que emoções e histórias sejam contadas de maneira única e
-                        significativa. Através desta prática, as pessoas podem voar, assim como o colibri, em direção à
-                        sua própria essência.</i>
+                            visual ou estética É um mergulho nas nossas águas uma exploração interna que leva à
+                            descoberta
+                            do verdadeiro eu, permitindo que emoções e histórias sejam contadas de maneira única e
+                            significativa. Através desta prática, as pessoas podem voar, assim como o colibri, em
+                            direção à
+                            sua própria essência.</i>
                     </p>
                 </div>
             </div>
